# factorem

./: pyproject.toml  test_reader.py
examples/: factorem.ipynb
factorem/: __main__.py  bsr_array_builder.py  data_loader.py
factorem/analysis/: __init__.py  affinity.py  data_loader.py  image_transformer.py  laplacian.py  low_pass_filter.py  map_average.py  mask_projector.py  maximum_a_posteriori.py  padding.py  pairwise_distance.py  pca.py  pipeline.py  preprocessor.py  processor.py  spectral_embedding.py
factorem/ctf/: __init__.py  ctf_2d.py  ctf_context.py  wiener_2d.py
factorem/geometry/: __init__.py  affine_matrix.py  align_inplane.py  euler.py  projection_direction.py
factorem/image/: __init__.py  batch_reader.py  image_location.py
factorem/synchronization/: __init__.py  average.py  burer_monteiro.py  correct.py
